# eLUCID

./: .gitignore  .gitmodules
andrew/elucid/: build_it.sh
andrew/elucid/include/lucid/descriptors/: brief_descriptor_extractor.h  brisk_descriptor_extractor.h  descriptor_extractor.h  elucid_descriptor_pattern.h  freak_descriptor_extractor.h  lucid_descriptor_extractor.h  opencv_descriptor_extractor.h  orb_descriptor_extractor.h  sift_descriptor_extractor.h  surf_descriptor_extractor.h
andrew/elucid/include/lucid/detectors/: brisk_feature_detector.h  censure_feature_detector.h  fast_feature_detector.h  feature_detector.h  harris_feature_detector.h  opencv_adapted_feature_detector.h  orb_feature_detector.h  sift_feature_detector.h  surf_feature_detector.h
andrew/elucid/include/lucid/tools/: experiment_driver.h  util.h
andrew/elucid/src/lucid/descriptors/: brief_descriptor_extractor.cpp  brisk_descriptor_extractor.cpp  elucid_binary_descriptor_extractor.cpp  elucid_descriptor_extractor.cpp  freak_descriptor_extractor.cpp  lucid_descriptor_extractor.cpp  opencv_descriptor_extractor.cpp  orb_descriptor_extractor.cpp  sift_descriptor_extractor.cpp  surf_descriptor_extractor.cpp
andrew/elucid/src/lucid/detectors/: brisk_feature_detector.cpp  censure_feature_detector.cpp  fast_feature_detector.cpp  feature_detector.cpp  harris_feature_detector.cpp  opencv_adapted_feature_detector.cpp  orb_feature_detector.cpp  sift_feature_detector.cpp  surf_feature_detector.cpp
andrew/elucid/src/lucid/tools/: experiment_driver.cpp  timer.cpp
andrew/timing/: build_it.sh  do_timings  run_tests.sh  test.cpp  timer.cpp  timer.h
config/experiments/: experiments_01.json  experiments_01.scala  experiments_01.xml  experiments_01.xml~  experiments_all.scala  experiments_small.scala
config/runtime/: runtime_eric.json  runtime_eric.scala  runtime_eric.xml  runtime_eric.xml~
config/tables/: table_all.scala  table_brisk.scala  table_briskLUCID.scala  table_color_and_size.scala  table_colorspace.scala  table_debug.scala  table_elucid.scala  table_newDescriptors.scala  table_orderVsRank.scala  table_robustCayley.scala  table_small.scala  table_wideNCC.scala
doc/: main.tex
src/: CMakeLists.txt  package.xml
src/android/: AndroidManifest.xml
src/android/jni/: Android.mk  include  jni_part.cpp  src
src/android/src/org/opencv/samples/tutorial3/: Sample3Native.java  Sample3View.java  SampleViewBase.java
src/cpp/: CMakeLists.txt  build_functions.sh
src/cpp/cmake/: FindOctave.cmake
src/cpp/include/lucid/: descriptors  lucid.h  tools
src/cpp/include/lucid/descriptors/: elucid_binary_descriptor_extractor.h  elucid_descriptor_extractor.h  elucid_descriptor_pattern.h
src/cpp/include/lucid/tools/: timer.h  util.h
src/cpp/mex/: mex_lucid.cpp  mex_make.m
src/cpp/src/: CMakeLists.txt  descriptor_extractor.cpp  elucid_binary_descriptor_extractor.cpp  elucid_descriptor_extractor.cpp  features2d.cpp  lucid_functions.cpp  util.cpp
src/ecto/: CMakeLists.txt  README
src/ecto/samples/: descriptors.py
src/ecto/src/: CMakeLists.txt  LUCID.cpp  module.cpp
src/matlab/: LUCID.m  main.m  rotatePattern.m  startup.m
src/scala/: .ensime  build.sbt
src/scala/project/: build.properties  build.scala  plugins.sbt
src/scala/src/main/scala/: config.scala  correspondence_method.scala  foreign.scala  geometry.scala  image_processing.scala  misc.scala  roc.scala  runExperiments.scala  run_experiments.scala  xml.scala
